--- a/play-video.html
+++ b/play-video.html
@@ -24,7 +24,7 @@
             <img src="images/upload.png" alt="">
             <img src="images/more.png"alt="">
             <img src="images/notification.png" alt="">
-            <img src="images/Jack.png" alt="" class="user-icon">
+            <img src="images/profile.png" alt="" class="user-icon">
         </div>
     </nav>
 
